--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
+      - name: Output github context
+        run: echo "${{ toJSON(github) }}"
   deploy:
     needs: test
     runs-on: ubuntu-latest
